Add css styling

--- a/asset/common.css
+++ b/asset/common.css
@@ -1,98 +1,13 @@
 :root {
   --base-size: 1.1rem;
-  --base-size-h1: 2rem;
+  --base-size-h1: 2.2rem;
   --base-size-h2: 1.2rem;
   --base-size-h3: 1.5rem;
+  --base-font-family: manrope; 
   --base-color: black;
   --base-line-height: 150%;
   --base-text-align: center;
   --base-max-width: 55vw; 
   --base-margin-left: 3%;
   --base-margin-right: 3%;
-
-}
-/* @media {min-width: 375px;} */
-
-.navbar {
-  list-style-type: circle;
-  display: flex;
-  justify-content: center;
-}
-
-nav {
-  /* background-color: blue; */
-  color: black;
-  padding: 2px 0;
-}
-
-.navbar a {
-  border: 2px solid black;
-  border-radius: 9999px;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  margin: 1%;
-  background-color: white;
-  font-weight: 700;
-  filter: drop-shadow(5px 5px red);
-
-  }
-  
-h1 {
-  color: var(--base-color);
-  font-size: var(--base-size-h1);
-  font-weight: 600;
-  letter-spacing: -2px;
-  line-height: 110%;
-}
-
-h2 {
-  font-size: var(--base-size-h2);
-  font-weight: 500;
-  color: grey; 
-  line-height: 120%;
-}
-
-.author {
-
-}
-
-
-h3 {
-  font-size: var(--base-size-h3);
-  font-weight: 700;
-  line-height: 100%;
-}
-* {
-  margin-top: 1em;
-}
-body {
-  font-size: var(--base-size);
-  margin-left: var(--base-margin-left);
-  margin-right: var(--base-margin-right);
-  line-height: var(--base-line-height);
-}
-section {
-  line-height: var(--base-line-height);
-}
-header {
-  /* display: none; */
-}
-footer {
-  background-color: black;
-  color: white;
-  padding-top: 15%;
-  padding-bottom: 15%;
-  padding-left: 5%;
-  padding-right: 5%;
-    /* padding: 0; */
-  margin: 0;
-}
-
-@media (min-width: 780px) {
-
-nav {
-  margin-left: 70%;  
- }
 }
