--- a/asset/direction-2.css
+++ b/asset/direction-2.css
@@ -1,8 +1,92 @@
-p {
-	color: gold;
-}
+* {
+	margin-top: 1em;
+  }
+  
+  
+  .navbar {
+	list-style-type: circle;
+	display: flex;
+	justify-content: center;
+  }
+  nav {
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	background-color: rgb(242, 227, 88);
 
-body {
-	font-family: monospace;
-	background-color: black;
-}
+
+  }
+  .navbar a {
+	padding-left: 16px;
+	padding-right: 16px;
+	padding-bottom: 6px;
+	/* margin: 1%; */
+	font-weight: 700;
+    font-family: martian mono;
+	font-size: 0.9rem;
+	}
+  
+  
+  h1 {
+	font-family: manrope;
+	font-size: var(--base-size-h1);
+	font-weight: 700;
+	letter-spacing: -1px;
+	line-height: 130%;
+  }
+  h2 {
+	font-size: var(--base-size-h2);
+	font-weight: 500;
+	color: black; 
+	line-height: 130%;
+	margin-bottom: 2rem;
+  }
+  .author {
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+  }
+  h3 {
+	font-family: manrope;
+	font-size: var(--base-size-h3);
+	font-weight: 700;
+	line-height: 100%;
+	color:black;
+
+	margin-top: 2rem;
+	margin-bottom: 1rem;
+  }
+  
+  
+  body {
+	font-family: var(--base-font-family);
+	font-size: var(--base-size);
+	margin-left: var(--base-margin-left);
+	margin-right: var(--base-margin-right);
+	line-height: var(--base-line-height);
+  }
+  section {
+	line-height: var(--base-line-height);
+  }
+  header {
+	background-color: rgb(242, 227, 88);
+
+	/* display: none; */
+  }
+  
+  
+  footer {
+	background-color: pink;
+	color: black;
+	padding-top: 15%;
+	padding-bottom: 15%;
+	padding-left: 5%;
+	padding-right: 5%;
+	  /* padding: 0; */
+	margin: -3%;
+  }
+  
+  @media (min-width: 769px) {
+  
+  nav {
+	margin-left: 70%;  
+   }
+  }
