--- a/asset/direction-3.css
+++ b/asset/direction-3.css
@@ -1,5 +1,6 @@
 * {
-	margin-top: 1em;
+	margin-top: 0.5em;
+	background-color: #F1E4DC;
   }
   
   
@@ -7,81 +8,173 @@
 	list-style-type: circle;
 	display: flex;
 	justify-content: center;
+	background-color: red;
+	border-radius: 1rem;
+
   }
   nav {
-	/* background-color: blue; */
-	color: black;
-  }
-  .navbar a {
-	border: 2px solid black;
-	border-radius: 9999px;
+	/* border: 2px solid black; */
+	border-radius: 1rem;
+	background-color: red;
+
+}
+.navbar a {
+	  background-color: red;
 	padding-left: 16px;
 	padding-right: 16px;
-	padding-top: 6px;
 	padding-bottom: 6px;
-	margin: 1%;
-	background-color: pink;
+	/* margin: 1%; */
 	font-weight: 700;
-	filter: drop-shadow(5px 5px black);
+    font-family: martian mono;
+	font-size: 0.9rem;
+	color: white;
+
 	}
   
   
   h1 {
-	font-family: alfa slab one;
-	/* font-family: manrope; */
+	font-family: poppins;
 	font-size: var(--base-size-h1);
-	/* font-weight: 700; */
-	/* letter-spacing: -1px; */
-	line-height: 130%;
+	font-weight: 600;
+	letter-spacing: -1px;
+	line-height: 140%;
+    margin-top: 1rem;
+	padding: 3%;
   }
   h2 {
-	font-size: var(--base-size-h2);
+	font-size: 1.5rem;
+	color: black;
+	line-height: 120%;
+	font-family: teko;
+	padding: 3%;
+
+}
+.author {
+	  /* border-top: 2px solid rgb(80, 80, 80); */
+	/* padding-top: 1rem;
+	padding-bottom: 1rem; */
+	padding: 3%;
+	/* border-top: 1px solid black; */
+	/* border-bottom: 1px solid black; */
 	font-weight: 500;
-	color: grey; 
-	line-height: 130%;
-	margin-bottom: 2rem;
-  }
-  .author {
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
   }
   h3 {
-	font-family: manrope;
-	font-size: var(--base-size-h3);
-	font-weight: 700;
+	font-family: poppins;
+	font-size: 2rem;
+	font-weight: 500;
 	line-height: 100%;
-	color:rgb(241, 129, 148); 
+	color:black;
+	/* margin-top: 2rem;*/
+	margin-bottom: 1rem; 
+	/* padding-top: 1rem;
+	padding-bottom: 1rem; */
+	border-radius: 1rem;
+	background-color: #01FE00;
+	padding: 1rem;
+  }
+  
+  H4 {
+	font-weight: 400;
 	margin-top: 2rem;
-	margin-bottom: 1rem;
+	color: black;
+	/* background-color: black; */
+	padding-left: 8px;
+    width: 28%;
+	font-family: Enriqueta;
+
+}
+h5 {
+	  background-color: #01FE00;
+	text-align: center;
+	font-weight: 500;
+	font-size: 1.1rem;
+		border: 1px solid black;
+		border-radius: 1rem;
   }
-  
-  
   body {
-	font-family: var(--base-font-family);
-	font-size: var(--base-size);
-	margin-left: var(--base-margin-left);
-	margin-right: var(--base-margin-right);
+	  font-family: Enriqueta;
+	  font-size: var(--base-size);
+	  margin-left: var(--base-margin-left);
+	  margin-right: var(--base-margin-right);
+	  line-height: var(--base-line-height);
+	}
+	section {
 	line-height: var(--base-line-height);
-  }
-  section {
-	line-height: var(--base-line-height);
+	border: 1px solid black;
+	border-radius: 1rem;
+	padding: 3%;
   }
   header {
+	/* background-color: rgb(242, 227, 88); */
+	/* border: 1px solid black;
+	border-radius: 1rem; */
 	/* display: none; */
+	max-width: 80vw;
+
   }
-  
-  
-  footer {
-	background-color: pink;
+  blockquote {
+	padding-left: 10%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+  }
+.round {
+	border: 1px solid black;
+	border-radius: 1.5rem;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	display: inline;
+	margin-bottom: 10%;
+
+}
+
+.roundred {
+	background-color: red;
 	color: black;
-	padding-top: 15%;
-	padding-bottom: 15%;
+	display: inline;
+	border-radius: 1.5rem;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	border: 1px solid black;
+
+}
+.roundspace {
+	padding-right: 1rem;
+padding-left: 2rem;
+	border: 1px solid black;
+	border-radius: 1.5rem;
+	display: inline;
+	margin-bottom: 10%;
+}
+
+.roundblack {
+	background-color: black;
+	color:red;
+	display: inline;
+	border-radius: 1.5rem;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	border: 1px solid black;
+}
+  footer {
+	color: black;
+	background-color: blue;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 	padding-left: 5%;
 	padding-right: 5%;
-	  /* padding: 0; */
-	margin: -3%;
+	margin-top: 3%;
+	border: 1px solid black;
+	border-radius: 1rem;
   }
-  
+em {
+	font-weight: 600;
+	background-color: blue;
+
+}
+
+
   @media (min-width: 769px) {
   
   nav {
