Added article 2 to separate design direction 1,2,3

--- a/asset/direction-3.css
+++ b/asset/direction-3.css
@@ -1,183 +1,170 @@
 * {
-	margin-top: 0.5em;
-	background-color: #F1E4DC;
-  }
-  
-  
-  .navbar {
-	list-style-type: circle;
-	display: flex;
-	justify-content: center;
-	background-color: red;
-	border-radius: 1rem;
+  margin-top: 0.5em;
+  background-color: #f1e4dc;
+}
 
-  }
-  nav {
-	/* border: 2px solid black; */
-	border-radius: 1rem;
-	background-color: red;
-
+.navbar {
+  list-style-type: circle;
+  display: flex;
+  justify-content: center;
+  background-color: red;
+  border-radius: 1rem;
+}
+nav {
+  /* border: 2px solid black; */
+  border-radius: 1rem;
+  background-color: red;
 }
 .navbar a {
-	  background-color: red;
-	padding-left: 16px;
-	padding-right: 16px;
-	padding-bottom: 6px;
-	/* margin: 1%; */
-	font-weight: 700;
-    font-family: martian mono;
-	font-size: 0.9rem;
-	color: white;
+  background-color: red;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 6px;
+  /* margin: 1%; */
+  font-weight: 700;
+  font-family: martian mono;
+  font-size: 0.9rem;
+  color: white;
+}
 
-	}
-  
-  
-  h1 {
-	font-family: poppins;
-	font-size: var(--base-size-h1);
-	font-weight: 600;
-	letter-spacing: -1px;
-	line-height: 140%;
-    margin-top: 1rem;
-	padding: 3%;
-  }
-  h2 {
-	font-size: 1.5rem;
-	color: black;
-	line-height: 120%;
-	font-family: teko;
-	padding: 3%;
-
+h1 {
+  font-family: poppins;
+  font-size: var(--base-size-h1);
+  font-weight: 600;
+  letter-spacing: -1px;
+  line-height: 140%;
+  margin-top: 1rem;
+  padding: 3%;
+}
+h2 {
+  font-size: 1.5rem;
+  color: black;
+  line-height: 120%;
+  font-family: teko;
+  padding: 3%;
 }
 .author {
-	  /* border-top: 2px solid rgb(80, 80, 80); */
-	/* padding-top: 1rem;
+  /* border-top: 2px solid rgb(80, 80, 80); */
+  /* padding-top: 1rem;
 	padding-bottom: 1rem; */
-	padding: 3%;
-	/* border-top: 1px solid black; */
-	/* border-bottom: 1px solid black; */
-	font-weight: 500;
-  }
-  h3 {
-	font-family: poppins;
-	font-size: 2rem;
-	font-weight: 500;
-	line-height: 100%;
-	color:black;
-	/* margin-top: 2rem;*/
-	margin-bottom: 1rem; 
-	/* padding-top: 1rem;
+  padding: 3%;
+  /* border-top: 1px solid black; */
+  /* border-bottom: 1px solid black; */
+  font-weight: 500;
+}
+h3 {
+  font-family: poppins;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 100%;
+  color: black;
+  /* margin-top: 2rem;*/
+  margin-bottom: 1rem;
+  /* padding-top: 1rem;
 	padding-bottom: 1rem; */
-	border-radius: 1rem;
-	background-color: #01FE00;
-	padding: 1rem;
-  }
-  
-  H4 {
-	font-weight: 400;
-	margin-top: 2rem;
-	color: black;
-	/* background-color: black; */
-	padding-left: 8px;
-    width: 28%;
-	font-family: Enriqueta;
+  border-radius: 1rem;
+  background-color: #01fe00;
+  padding: 1rem;
+}
 
+H4 {
+  font-weight: 400;
+  margin-top: 2rem;
+  color: black;
+  /* background-color: black; */
+  padding-left: 8px;
+  width: 28%;
+  font-family: Enriqueta;
 }
 h5 {
-	  background-color: #01FE00;
-	text-align: center;
-	font-weight: 500;
-	font-size: 1.1rem;
-		border: 1px solid black;
-		border-radius: 1rem;
-  }
-  body {
-	  font-family: Enriqueta;
-	  font-size: var(--base-size);
-	  margin-left: var(--base-margin-left);
-	  margin-right: var(--base-margin-right);
-	  line-height: var(--base-line-height);
-	}
-	section {
-	line-height: var(--base-line-height);
-	border: 1px solid black;
-	border-radius: 1rem;
-	padding: 3%;
-  }
-  header {
-	/* background-color: rgb(242, 227, 88); */
-	/* border: 1px solid black;
+  background-color: #01fe00;
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border: 1px solid black;
+  border-radius: 1rem;
+}
+body {
+  font-family: Enriqueta;
+  font-size: var(--base-size);
+  margin-left: var(--base-margin-left);
+  margin-right: var(--base-margin-right);
+  line-height: var(--base-line-height);
+}
+section {
+  line-height: var(--base-line-height);
+  border: 1px solid black;
+  border-radius: 1rem;
+  padding: 3%;
+}
+header {
+  /* background-color: rgb(242, 227, 88); */
+  /* border: 1px solid black;
 	border-radius: 1rem; */
-	/* display: none; */
-	max-width: 80vw;
-
-  }
-  blockquote {
-	padding-left: 10%;
-	padding-top: 5%;
-	padding-bottom: 5%;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
-  }
+  /* display: none; */
+  max-width: 80vw;
+}
+blockquote {
+  padding-left: 10%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 .round {
-	border: 1px solid black;
-	border-radius: 1.5rem;
-	padding-right: 1rem;
-	padding-left: 1rem;
-	display: inline;
-	margin-bottom: 10%;
-
+  border: 1px solid black;
+  border-radius: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  display: inline;
+  margin-bottom: 10%;
 }
 
 .roundred {
-	background-color: red;
-	color: black;
-	display: inline;
-	border-radius: 1.5rem;
-	padding-right: 1rem;
-	padding-left: 1rem;
-	border: 1px solid black;
-
+  background-color: red;
+  color: black;
+  display: inline;
+  border-radius: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  border: 1px solid black;
 }
 .roundspace {
-	padding-right: 1rem;
-padding-left: 2rem;
-	border: 1px solid black;
-	border-radius: 1.5rem;
-	display: inline;
-	margin-bottom: 10%;
+  padding-right: 1rem;
+  padding-left: 2rem;
+  border: 1px solid black;
+  border-radius: 1.5rem;
+  display: inline;
+  margin-bottom: 10%;
 }
 
 .roundblack {
-	background-color: black;
-	color:red;
-	display: inline;
-	border-radius: 1.5rem;
-	padding-right: 1rem;
-	padding-left: 1rem;
-	border: 1px solid black;
+  background-color: black;
+  color: red;
+  display: inline;
+  border-radius: 1.5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  border: 1px solid black;
 }
-  footer {
-	color: black;
-	background-color: blue;
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-	padding-left: 5%;
-	padding-right: 5%;
-	margin-top: 3%;
-	border: 1px solid black;
-	border-radius: 1rem;
-  }
+footer {
+  color: black;
+  background-color: blue;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-top: 3%;
+  border: 1px solid black;
+  border-radius: 1rem;
+}
 em {
-	font-weight: 600;
-	background-color: blue;
-
+  font-weight: 600;
+  background-color: blue;
 }
 
-
-  @media (min-width: 769px) {
-  
+@media (min-width: 769px) {
   nav {
-	margin-left: 70%;  
-   }
+    margin-left: 70%;
   }
+}
