--- a/first-article/direction-1.css
+++ b/first-article/direction-1.css
@@ -35,6 +35,12 @@ h1 {
   line-height: 140%;
   margin-top: 1rem;
   padding: 3%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 h2 {
   font-size: 1.5rem;
