--- a/landing-page/landing.css
+++ b/landing-page/landing.css
@@ -1,33 +1,6 @@
 * {
 	margin-top: 1em;
-	max-width: 80ch;
-  }
-  
-  
-  .navbar {
-	list-style-type: circle;
-	display: flex;
-	justify-content: center;
-  }
-  nav {
-	/* background-color: blue; */
-	color: black;
-  }
-  .navbar a {
-	border: 2px solid black;
-	border-radius: 9999px;
-	padding-left: 16px;
-	padding-right: 16px;
-	padding-top: 6px;
-	padding-bottom: 6px;
-	margin: 1%;
-	background-color: pink;
-	font-weight: 700;
-	filter: drop-shadow(5px 5px black);
-	}
-  
-  header {
-	margin: 0 auto;
+	/* margin: 0; */
   }
 
   h1 {
@@ -39,71 +12,58 @@
 	z-index: 6;
 	max-width: 80ch;
   }
-  h2 {
-	font-size: var(--base-size-h2);
-	font-weight: 500;
-	color: rgb(72, 72, 72); 
-	line-height: 130%;
-	margin-bottom: 2rem;
-	position: relative;
-	z-index: 5;
-
-  }
-  .author {
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-  }
-  h3 {
-	font-family: manrope;
-	font-size: 2rem;
-	font-weight: 900;
-	line-height: 100%;
-	color:black; 
-	margin-top: 2rem;
-	margin-bottom: 1rem;
-	letter-spacing: -1px;
-
-  }
-  H4 {
-	font-weight: 500;
-	font-size: 1rem;
-	color: rgb(241, 129, 148);
-    margin-top: 2.5rem;
-	margin-bottom: 1rem;
-	border: 2px solid rgb(241, 129, 148);;
-	border-radius: 9999px;
-	padding-left: 8px;
-	padding-right: 8px;
-	width: 27%;
-  }
-  h5 {
+    h5 {
 	text-align: center;
 	font-weight: 600;
-	font-size: 1.1rem;
+	font-size: 1.2rem;
 	font-family: manrope;
-  }
-  body {
-	font-family: var(--base-font-family);
-	font-size: var(--base-size);
-	margin-left: var(--base-margin-left);
-	margin-right: var(--base-margin-right);
-	line-height: var(--base-line-height);
-  }
-  section {
-	line-height: var(--base-line-height);
-  }
-  blockquote {
-	padding-left: 10%;
-	padding-top: 5%;
-	padding-bottom: 5%;
-	border-left: 4px solid pink;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
-  }
+	border: 2px solid black;
+	border-radius: 9999px;
+	padding: 1%;
+	margin: 1%;
+	background-color: pink;
 
-  em {
-	font-weight: 600;
+  } 
+ 
+  .navbar {
+  }
+  nav {
+	color: black;
+  }
+  .navbar a {
+	filter: drop-shadow(5px 5px black);
+	}
+  
+/* List */
+	.article {
+		font-family: alfa slab one;
+		font-size: var(--base-size-h1);
+		line-height: 200%;
+		margin: 0;
+		padding: 0;
 }
+	.article li {
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	transition: transform 0.6s ease, background-color 0.6s ease;
+	margin: 0;
+	padding: 0;
+}
+	.article li:nth-child(1):hover {
+	background-color: rgb(176, 145, 183);
+	transform: translateY(-10px);
+}
+	.article li:nth-child(2):hover {
+	background-color: skyblue;
+	transform: translateY(-10px);
+}
+	.article li:nth-child(3):hover {
+	background-color: rgb(255, 91, 91);
+	transform: translateY(-10px);
+}
+
+
+
 .circle-container {
 	display: flex;
 	position: absolute;
@@ -183,20 +143,6 @@
 	background-color: green;
 } */
 
-a {
-	border-bottom: 2px solid;
-}
-  footer {
-	background-color: green;
-	color: white;
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-	padding-left: 5%;
-	padding-right: 5%;
-	margin-top: 10%;
-	border-radius: 1rem;
-
-  }
  
   @media (min-width: 769px) {
   
