--- a/asset/common.css
+++ b/asset/common.css
@@ -3,7 +3,9 @@
   --base-size-h1: 2.2rem;
   --base-size-h2: 1.2rem;
   --base-size-h3: 1.5rem;
-  --base-font-family: manrope; 
+  --base-size-h1-landing: 3.5rem;
+  --base-font-family-h1: alfa slab one;
+  --base-font-family-body: manrope; 
   --base-color: black;
   --base-line-height: 150%;
   --base-text-align: center;
