Updated overall margin/spacing, added em highlight,

--- a/landing.css
+++ b/landing.css
@@ -21,23 +21,17 @@
 	font-family: var(--base-font-family-body);
 	border: 1px solid black;
 	border-radius: 9999px;
-	padding: 0.5em;
-	padding-top: 0.001em;
-	padding-bottom: 0.001em;
+	padding-left:1rem;
+	padding-right: 1rem;
 	display: inline-block;
 
   } 
     h5 {
 	text-align: center;
-	font-weight: 700;
 	font-size: 1.2rem;
-	font-family: var(--base-font-family-body);
-	border: 2px solid black;
-	border-radius: 9999px;
-	padding: 0.2em 0.5em;
-	background-color: pink;
-	display: inline-block;
+	font-family: var(--base-font-family-h1);
 	margin-left: 1rem;
+	letter-spacing: 1px;
   } 
  
 
@@ -48,15 +42,14 @@
 		line-height: 130%;
 		font-weight: 700;
 		margin: 0;
+		background-color: white;
 }
 	.article li {
 	border-top: 2px solid black;
 	transition: transform 0.6s ease, background-color 0.6s ease;
-	margin: 0;
 	padding-top: 2rem;
 	padding-bottom: 0.5rem;
 	padding-left: 1rem;
-	box-sizing: border-box;
 }
 	.article li:nth-child(1):hover {
 	background-color: rgb(176, 145, 183);
@@ -162,6 +155,15 @@
    h2 {
 	margin-left: 2rem;
    }
+
+   h5 {
+	text-align: left;
+	font-size: 1.2rem;
+	font-family: var(--base-font-family-h1);
+	margin-left: 1rem;
+	letter-spacing: 1px;
+  } 
+
 
 /* List */
 .article {
